# fun_calc

./: CMakeLists.txt
editor_scripts/: local.lua
src/: calculator.cpp  calculator.h  graph.cpp  graph.h  main.cpp  util.cpp  util.h
src/tests/: test_calculator.cpp
